Improves constructors, adds option to ignore dropoff days, adds option to unconsider requirements after a certain date

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,25 @@
 server.port=9410
 logging.level.root=WARN
 spring.h2.console.enabled=true
-#How long it takes for the maximal amount of skill "loss" to take full effect
-#skill "loss" is at maximum 0.5
+#skill dropoff.days indicates how long it takes for the maximal amount of skill "loss" to take full effect, in case of -1, it is not considered
 skill.dropoff.days=365.0
+#The default availability of stakeholders if not specified
 person.hours.default=999999.0
+#skill "loss" is at maximum skill.dropoff.max
+skill.dropoff.max=0.5
+#If a requirement was done more than skill.dropoff.days.unconsider days ago, the requirement is therefore ignored, unless asking for a recommendation for that requirement, if -1, there is no time limit
+skill.dropoff.days.unconsider=-1.0
+
 spring.datasource.url=jdbc:h2:file:./data/stakeholders-recommender/database;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
 javax.persistence.lock.timeout=6000000
+
 #Allows messages of any size to be sent
 server.tomcat.max-http-post-size=-1
-spring.jpa.properties.hibernate.jdbc.batch_size=500
+#Database parameters
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.batch_versioned_data=true
