Removes parallelism and fixes bug with text preprocessing in text with "[]"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,16 @@ logging.level.root=WARN
 spring.h2.console.enabled=true
 #skill dropoff.days indicates how long it takes for the maximal amount of skill "loss" to take full effect, in case of -1, it is not considered
 skill.dropoff.days=365.0
+Vogella.skill.dropoff.days=
 #The default availability of stakeholders if not specified
 person.hours.default=999999.0
+Vogella.person.hours.default=999999.0
 #skill "loss" is at maximum skill.dropoff.max
 skill.dropoff.max=0.5
+Vogella.skill.dropoff.max=
 #If a requirement was done more than skill.dropoff.days.unconsider days ago, the requirement is therefore ignored, unless asking for a recommendation for that requirement, if -1, there is no time limit
 skill.dropoff.days.unconsider=-1.0
+Vogella.skill.dropoff.days.unconsider=-1.0
 
 spring.datasource.url=jdbc:h2:file:./data/stakeholders-recommender/database;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.username=admin
