Fixes application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ logging.level.root=WARN
 spring.h2.console.enabled=true
 #skill dropoff.days indicates how long it takes for the maximal amount of skill "loss" to take full effect, in case of -1, it is not considered
 skill.dropoff.days=365.0
-Vogella.skill.dropoff.days=
+Vogella.skill.dropoff.days=365.0
 #The default availability of stakeholders if not specified
 person.hours.default=999999.0
 Vogella.person.hours.default=999999.0
