Fixes strange bug with harcoded vogella properties and saved keyword model

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ person.hours.default=999999.0
 Vogella.person.hours.default=999999.0
 #skill "loss" is at maximum skill.dropoff.max
 skill.dropoff.max=0.5
-Vogella.skill.dropoff.max=
+Vogella.skill.dropoff.max=0.5
 #If a requirement was done more than skill.dropoff.days.unconsider days ago, the requirement is therefore ignored, unless asking for a recommendation for that requirement, if -1, there is no time limit
 skill.dropoff.days.unconsider=-1.0
 Vogella.skill.dropoff.days.unconsider=-1.0
