--- a/pom.xml
+++ b/pom.xml
@@ -174,8 +174,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
                 <configuration>
-                    <forkCount>3</forkCount>
-                    <reuseForks>true</reuseForks>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
                     <argLine>-Xmx3072m -XX:MaxPermSize=1024m</argLine>
                 </configuration>
             </plugin>
