--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
                 <version>2.22.0</version>
                 <configuration>
                     <forkCount>1</forkCount>
-                    <reuseForks>false</reuseForks>
+                    <reuseForks>true</reuseForks>
                     <argLine>-Xmx3072m -XX:MaxPermSize=1024m</argLine>
                 </configuration>
             </plugin>
