Adds progress logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ Vogella.skill.dropoff.max=0.5
 #If a requirement was done more than skill.dropoff.days.unconsider days ago, the requirement is therefore ignored, unless asking for a recommendation for that requirement, if -1, there is no time limit
 skill.dropoff.days.unconsider=-1.0
 Vogella.skill.dropoff.days.unconsider=-1.0
-spring.datasource.url=jdbc:h2:file:./data/stakeholders-recommender/database;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:file:./data/stakeholders-recommender/database;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE;
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.h2.Driver
